--- a/index.html
+++ b/index.html
@@ -28,15 +28,11 @@
       </div>
     </div>
 
-    <br>
-
     <div class="row startBtnRow">
       <div class="col-md-12">
         <button id="startBtn">START</button>
       </div>
     </div>
-
-    <br>
 
     <!-- Facebook Login Button -->
     <div class="row facebook-login-row">
@@ -46,24 +42,16 @@
       </div>
     </div>
 
-    <br>
-
-    <div class="row">
-      <!-- Player Name and Score -->
-      <div class="scoreRow">
-        <div id="player1" class="players col-md-12">
-            <h3 id="player1"></h3></div>
-        <div id="player1Score" class="scores col-md-12">Score</div>
-        <!-- <div id="player2" class="players col-md-12">Player 2</div>
-      <div id="player2Score" class="scores col-md-12">Score</div> -->
+    <!-- Player Name and Score -->
+    <div class="row scoreRow">
+      <div class="col-md-12">
+        <p>Player Name</p>
+        <h3 id="player1"></h3>
+        <p>SCORE</p>
+        <h3 id="playerScore">0</h3>
       </div>
-
-      <br>
-      
-        </div>
-      </div>
-
     </div>
+
 
     <!-- this is where our messages will be displayed -->
     <!-- <div id="chat-box" class="text-left well"></div> -->
