fixed display name position

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <!-- Player Name and Score -->
     <div class="row scoreRow">
       <div class="col-md-12">
-        <p>Player Name</p>
-        <h3 id="player1"></h3>
+        <h3 id="player1">Player Name</h3>
         <p>SCORE</p>
         <h3 id="playerScore">0</h3>
       </div>
