Fixed Jenns mess hahaha

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <div class="question-popup"></div>
+        <div class="question"></div>
+        <div id="choices-div"></div>
+      </div>
+    </div>
 
     <!-- this is where our messages will be displayed -->
     <!-- <div id="chat-box" class="text-left well"></div> -->
