--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <title>Brain Jam!</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" type="text/css" href="assets/css/questionAndChoices.css">
-  <!-- <link rel="icon" type="image/icon" href="assets/images/brain.ico"> -->
+  <link rel="icon" type="image/icon" href="assets/images/brain.ico">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Delius">
 </head>
