--- a/index.html
+++ b/index.html
@@ -69,52 +69,52 @@
         <table>
           <tbody id="gameGrid">
             <tr>
-              <td><button class="gameButton easy" class="one">$100</button></td>
-              <td><button class="gameButton easy" class="one">$100</button></td>
-              <td><button class="gameButton easy" class="one">$100</button></td>
-              <td><button class="gameButton easy" class="one">$100</button></td>
-              <td><button class="gameButton easy" class="one">$100</button></td>
-              <td><button class="gameButton easy" class="one">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
+              <td><button class="gameButton easy" data-points="100">$100</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton easy" class="two">$200</button></td>
-              <td><button class="gameButton easy" class="two">$200</button></td>
-              <td><button class="gameButton easy" class="two">$200</button></td>
-              <td><button class="gameButton easy" class="two">$200</button></td>
-              <td><button class="gameButton easy" class="two">$200</button></td>
-              <td><button class="gameButton easy" class="two">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
+              <td><button class="gameButton easy" data-points="200">$200</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton medium" class="three">$300</button></td>
-              <td><button class="gameButton medium" class="three">$300</button></td>
-              <td><button class="gameButton medium" class="three">$300</button></td>
-              <td><button class="gameButton medium" class="three">$300</button></td>
-              <td><button class="gameButton medium" class="three">$300</button></td>
-              <td><button class="gameButton medium" class="three">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
+              <td><button class="gameButton medium" data-points="300">$300</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton medium" class="four">$400</button></td>
-              <td><button class="gameButton medium" class="four">$400</button></td>
-              <td><button class="gameButton medium" class="four">$400</button></td>
-              <td><button class="gameButton medium" class="four">$400</button></td>
-              <td><button class="gameButton medium" class="four">$400</button></td>
-              <td><button class="gameButton medium" class="four">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
+              <td><button class="gameButton medium" data-points="400">$400</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton hard" class="five">$500</button></td>
-              <td><button class="gameButton hard" class="five">$500</button></td>
-              <td><button class="gameButton hard" class="five">$500</button></td>
-              <td><button class="gameButton hard" class="five">$500</button></td>
-              <td><button class="gameButton hard" class="five">$500</button></td>
-              <td><button class="gameButton hard" class="five">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
+              <td><button class="gameButton hard" data-points="500">$500</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton hard" class="six">$600</button></td>
-              <td><button class="gameButton hard" class="six">$600</button></td>
-              <td><button class="gameButton hard" class="six">$600</button></td>
-              <td><button class="gameButton hard" class="six">$600</button></td>
-              <td><button class="gameButton hard" class="six">$600</button></td>
-              <td><button class="gameButton hard" class="six">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
+              <td><button class="gameButton hard" data-points="600">$600</button></td>
             </tr>
           </tbody>
         </table>
