--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Fernando is awesome! -->
-
 <head>
   <meta charset="UTF-8">
   <title>Brain Jam!</title>
@@ -28,7 +26,6 @@
       </div>
     </div>
 
-
     <div class="row startBtnRow">
       <div class="col-md-12">
         <button id="startBtn">START</button>
@@ -45,7 +42,7 @@
     </div>
 
     <!-- Player Name and Score -->
-    <div id="playerAndScore" class = "container">
+    <div id="playerAndScore" class="container">
       <div class="row scoreRow">
         <div class="col-md-12">
           <h3 id="player1">Player Name</h3>
@@ -55,78 +52,27 @@
           <h3 id="highestScore">0</h3>
         </div>
       </div>
-
     </div>
 
-      <div class="row">
-        <div class="col-md-12">
-          <div class="question-popup" id="question-div"></div>
-          <div class="question" id="question"></div>
-          <div id="choices-div"></div>
-        </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="question-popup" id="question-div"></div>
+        <div class="question" id="question"></div>
+        <div id="choices-div"></div>
       </div>
-
+    </div>
 
     <!-- GAME BOARD ROW -->
     <div class="row gameRow">
-
       <!-- THE GAME BOARD -->
       <div class="col-md-12">
         <table>
           <tbody id="gameGrid">
-            <!-- <tr>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-            </tr> -->
+            <!-- GAME POPULATED HERE -->
           </tbody>
         </table>
       </div>
     </div>
-
 
     <!-- JavaScript Files -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
@@ -135,7 +81,6 @@
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/firebase.js"></script>
-
 
 </body>
 
