app changes and html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
       </div>
     </div>
 
+    <!-- Correct or Wrong Text -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="correctOrWrongText"></div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-md-12">
         <div class="question-popup" id="question-div"></div>
