--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
     </div>
 
     <!-- Player Name and Score -->
-    <div id="playerAndScore" class = "container">
+    <div id="playerAndScore" class="container">
       <div class="row scoreRow">
         <div class="col-md-12">
           <h3 id="player1">Player Name</h3>
           <p>SCORE</p>
           <h3 id="playerScore">0</h3>
+          <p>Your Highest Score</p>
+          <h3 id="playerBest">0</h3>
           <p>Highest All Time Score</p>
           <h3 id="highestScore">0</h3>
         </div>
@@ -57,13 +59,13 @@
 
     </div>
 
-      <div class="row">
-        <div class="col-md-12">
-          <div class="question-popup" id="question-div"></div>
-          <div class="question" id="question"></div>
-          <div id="choices-div"></div>
-        </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="question-popup" id="question-div"></div>
+        <div class="question" id="question"></div>
+        <div id="choices-div"></div>
       </div>
+    </div>
 
 
     <!-- GAME BOARD ROW -->
