--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Fernando is awesome! -->
-
 <head>
   <meta charset="UTF-8">
   <title>Brain Jam!</title>
@@ -28,10 +26,10 @@
       </div>
     </div>
 
-
     <div class="row startBtnRow">
       <div class="col-md-12">
         <button id="startBtn">START</button>
+        <button id="resetBtn">RESET</button>
       </div>
     </div>
 
@@ -56,7 +54,16 @@
           <h3 id="highestScore">0</h3>
         </div>
       </div>
+    </div>
 
+<!-- Correct or Wrong Text -->
+    <div class="row">
+      <div class="col-md-12">
+         <div class="correctOrWrongText"></div>
+        <div class="question-popup" id="question-div"></div>
+        <div class="question" id="question"></div>
+        <div id="choices-div"></div>
+      </div>
     </div>
 
     <div class="row">
@@ -67,62 +74,13 @@
       </div>
     </div>
 
-
     <!-- GAME BOARD ROW -->
     <div class="row gameRow">
-
       <!-- THE GAME BOARD -->
       <div class="col-md-12">
         <table>
           <tbody id="gameGrid">
-            <tr>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-              <td><button class="gameButton easy" data-points="100">$100</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-              <td><button class="gameButton easy" data-points="200">$200</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-              <td><button class="gameButton medium" data-points="300">$300</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-              <td><button class="gameButton medium" data-points="400">$400</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-              <td><button class="gameButton hard" data-points="500">$500</button></td>
-            </tr>
-            <tr>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-              <td><button class="gameButton hard" data-points="600">$600</button></td>
-            </tr>
+            <!-- GAME POPULATED HERE -->
           </tbody>
         </table>
       </div>
