--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     <!-- Correct or Wrong Text -->
     <div class="row">
       <div class="col-md-12">
-        <div class="correctOrWrongText"></div>
+        <div>
+          <p class="correctOrWrongText"></p>
+        </div>
         <div class="question-popup" id="question-div"></div>
         <div class="question" id="question"></div>
         <div id="choices-div"></div>
